# Selecao-FESF-SUS-2--F.C

./: .env.example  .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: .env.example  main.py  seed.py
backend/src/api/v1/: dependencies.py  router.py
backend/src/api/v1/routes/: activities.py  auth.py
backend/src/core/: database.py  security.py  settings.py
backend/src/crud/: activities.py  users.py
backend/src/middlewares/: cors.py
backend/src/models/: models.py
backend/src/repositories/: activities_repository.py  users_repository.py
backend/src/schema/: auth_schema.py  db_schema.py
backend/src/schemas/: auth_schema.py
backend/src/service/: rcode_generate.py  verificators.py
backend/src/services/: rcode_generate.py  verificators.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/recovery-password/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/main/: page.tsx
frontend/src/app/main/activities/: page.tsx
frontend/src/app/main/activities/[id]/: page.tsx
frontend/src/app/main/registry-activitie/: page.tsx
frontend/src/components/: Header.tsx  LoginForm.tsx  SideBar.tsx
frontend/src/services/: apiClient.ts
